--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
                     <div className="flex items-center justify-center gap-1">
                         Copyright © 2026 
                         <a 
-                        href="https://www.weido.biz" 
+                        href="https://weido.biz/" 
                         target="_blank" 
                         rel="noopener noreferrer" 
                         className="hover:text-blue-500 transition-colors flex items-center gap-0.5"
